# ansible-k3s-cluster

./: .ansible-lint.yml  .gitignore  CONTRIBUTING.md  README.md  ansible.cfg
.devcontainer/: commonFunctions  devcontainer-lock.json  devcontainer.json  initializeRtk  installCaveman  installCodebaseMemoryMcp  installRtk  installSpecKit  installTestConnection  post-create.sh  post-start.sh  pyproject.toml  upgradeSpecKit
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
ansible/: requirements.yml
ansible/group_vars/: all.yml  k3s_agents.yml  k3s_servers.yml
ansible/playbooks/: cluster-addons.yml  cluster-core.yml  scale-nodes.yml  site.yml  upgrade-k3s.yml
diagnostics/: RANCHER-TROUBLESHOOTING.md  rancher-diagnostic.sh
docs/: ansible-k3s-baseline.md  ansible-structure.md  cleanup-decision-record.md  kube-vip-configuration.md
docs/ai-prompts/: baseline-requirements.md  cleanup-spec.md  fill-in-the-constitution.md  plan.md
specs/001-k3s-ansible-baseline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-repository-cleanup/: data-model.md  implementation-notes.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ha-component-deployment/: data-model.md  plan.md  quickstart.md  (+3 more)
(+158 files in other folders)
